# penny

./: .env.example  .gitignore  Makefile  README.md  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  set_comment_positions.py  tailwind.config.js
comments/: forms.py  models.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_position.py
core/: asgi.py  settings.py  urls.py  wsgi.py
nannies/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
nannies/migrations/: 0001_initial.py  0002_nanny_created_at_nanny_updated_at.py  0003_nanny_deleted_at.py  0004_alter_nanny_gender.py
pages/: urls.py  views.py
pet_nanny/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/scripts/: app.js
src/scripts/components/: drag.js
src/tailwind/: style.css
static/scripts/: app.js
static/styles/: style.css
templates/comments/: comment.html
templates/layouts/: base.html
templates/nannies/: edit.html  index.html  nanny_detail.html  nanny_list.html  new.html  show.html
templates/pages/: about.html  home.html  user_list.html
templates/registration/: login.html
templates/shared/: footer.html  message.html  navbar.html
