[tool.poetry]
name = "pet-nanny"
version = "0.1.0"
description = "寵物保姆"
authors = ["Eddie <eddie@5xcampus.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
